// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialsScreen should render correctly when expired 1`] = `
<NativeBaseProvider
  initialWindowMetrics={
    Object {
      "frame": Object {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "insets": Object {
        "bottom": 0,
        "left": 0,
        "right": 0,
        "top": 0,
      },
    }
  }
>
  <CredentialStatus
    credential={
      Object {
        "id": 1,
        "status": 2,
      }
    }
  />
</NativeBaseProvider>
`;

exports[`CredentialsScreen should render correctly when invalid 1`] = `
<NativeBaseProvider
  initialWindowMetrics={
    Object {
      "frame": Object {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "insets": Object {
        "bottom": 0,
        "left": 0,
        "right": 0,
        "top": 0,
      },
    }
  }
>
  <CredentialStatus
    credential={
      Object {
        "id": 1,
        "status": 1,
      }
    }
  />
</NativeBaseProvider>
`;

exports[`CredentialsScreen should render correctly when revoked 1`] = `
<NativeBaseProvider
  initialWindowMetrics={
    Object {
      "frame": Object {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "insets": Object {
        "bottom": 0,
        "left": 0,
        "right": 0,
        "top": 0,
      },
    }
  }
>
  <CredentialStatus
    credential={
      Object {
        "id": 1,
        "status": 4,
      }
    }
  />
</NativeBaseProvider>
`;

exports[`CredentialsScreen should render correctly when verified 1`] = `
<NativeBaseProvider
  initialWindowMetrics={
    Object {
      "frame": Object {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "insets": Object {
        "bottom": 0,
        "left": 0,
        "right": 0,
        "top": 0,
      },
    }
  }
>
  <CredentialStatus
    credential={
      Object {
        "id": 1,
        "status": 3,
      }
    }
  />
</NativeBaseProvider>
`;
